<resources>
    <string name="app_name">Sabor do Botânico</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textfield_label_name">Name*</string>
    <string name="textfield_label_phone">Phone</string>
    <string name="textfield_label_product">Product</string>
    <string name="textfield_label_value">Value</string>
    <string name="textfield_label_date">Date</string>
    <string name="switch_material_status">paid</string>
    <string name="button_save_order">Save</string>
    <string name="field_is_required">Campo é obrigatório</string>
</resources>
